# aplit

./: README.md  pyproject.toml
src/aplit/: app.py  cli.py  utils.py
